Resolve #33 Create cashier page