@@ -52,6 +52,11 @@
             <version>15.0.1</version>
         </dependency>
         <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>15.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.11</version>
@@ -155,22 +160,22 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.gitlab.muhammadkholidb</groupId>
+            <groupId>com.gitlab.stoready</groupId>
             <artifactId>sequel</artifactId>
             <version>0.0.2</version>
         </dependency>
         <dependency>
-            <groupId>com.gitlab.muhammadkholidb</groupId>
+            <groupId>com.gitlab.stoready</groupId>
             <artifactId>pandora</artifactId>
             <version>0.0.1</version>
         </dependency>
         <dependency>
-            <groupId>com.gitlab.muhammadkholidb</groupId>
+            <groupId>com.gitlab.stoready</groupId>
             <artifactId>toolbox</artifactId>
             <version>0.0.2</version>
         </dependency>
         <dependency>
-            <groupId>com.gitlab.muhammadkholidb</groupId>
+            <groupId>com.gitlab.stoready</groupId>
             <artifactId>norway</artifactId>
             <version>0.0.1</version>
         </dependency>
@@ -245,6 +250,7 @@
                     <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
                     <options>
                         <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.print=ALL-UNNAMED</option>
                     </options>
                 </configuration>
             </plugin>
